INCLUDE_DIRECTORIES()

SET(SRC_LIST 
		./all_user_request.cc
		./all_user_request.h
		./all_user_response.cc
		./all_user_response.h
		./attach_data.cc
		./attach_data.h
		./base_data.h
		./base_teamtalk_pdu.cc
		./base_teamtalk_pdu.h
		./const_message_pdu_types.h
		./db_query_request.cc
		./db_query_request.h
		./db_query_response.cc
		./db_query_response.h
		./db_write_response.cc
		./db_write_response.h
		./department_request.cc
		./department_request.h
		./department_response.cc
		./department_response.h
		./file_add_offline_req.cc
		./file_add_offline_req.h
		./file_del_offline_req.cc
		./file_del_offline_req.h
		./file_has_offline_req.cc
		./file_has_offline_req.h
		./file_has_offline_res.cc
		./file_has_offline_res.h
		./friend_list_request.cc
		./friend_list_request.h
		./friend_list_response.cc
		./friend_list_response.h
		./group_change_member_notify.cc
		./group_change_member_notify.h
		./group_change_member_request.cc
		./group_change_member_request.h
		./group_change_member_response.cc
		./group_change_member_response.h
		./group_create_normal_group_notify.cc
		./group_create_normal_group_notify.h
		./group_create_tmp_group_request.cc
		./group_create_tmp_group_request.h
		./group_create_tmp_group_response.cc
		./group_create_tmp_group_response.h
		./group_dialog_list_request.cc
		./group_dialog_list_request.h
		./group_dialog_list_response.cc
		./group_dialog_list_response.h
		./group_history_msg_request.cc
		./group_history_msg_request.h
		./group_list_request.cc
		./group_list_request.h
		./group_list_response.cc
		./group_list_response.h
		./group_msg_list_response.cc
		./group_msg_list_response.h
		./group_msg_read_ack.cc
		./group_msg_read_ack.h
		./group_unread_msg_count_request.cc
		./group_unread_msg_count_request.h
		./group_unread_msg_count_response.cc
		./group_unread_msg_count_response.h
		./group_unread_msg_request.cc
		./group_unread_msg_request.h
		./group_user_list_request.cc
		./group_user_list_request.h
		./group_user_list_response.cc
		./group_user_list_response.h
		./history_msg_request.cc
		./history_msg_request.h
		./msg_data.cc
		./msg_data.h
		./msg_list_response.cc
		./msg_list_response.h
		./msg_read_ack.cc
		./msg_read_ack.h
		./remove_session_request.cc
		./remove_session_request.h
		./remove_session_response.cc
		./remove_session_response.h
		./stop_receive_packet.cc
		./stop_receive_packet.h
		./unread_msg_count_request.cc
		./unread_msg_count_request.h
		./unread_msg_count_response.cc
		./unread_msg_count_response.h
		./unread_msg_request.cc
		./unread_msg_request.h
		./user_action_log.cc
		./user_action_log.h
		./users_info_request.cc
		./users_info_request.h
		./users_info_response.cc
		./users_info_response.h
		./validate_request.cc
		./validate_request.h
		./validate_response.cc
		./validate_response.h
	)

SET(LIBRARY_OUTPUT_PATH ${TF_CURRENT_BINARY_PATH_LIB})

ADD_LIBRARY(proto STATIC ${SRC_LIST})
     